--- a/AppEmit/demo/htmlDemo/AppEmbed.html
+++ b/AppEmit/demo/htmlDemo/AppEmbed.html
@@ -38,7 +38,7 @@
 </div>
 
 </body>
-  <script src="AppEmit_0.1.js"></script>
+  <script src="AppEmit_0.1_min.js"></script>
 <script>
  
 	var init_App=function(){   
