--- a/AppEmit/demo/htmlDemo/index.html
+++ b/AppEmit/demo/htmlDemo/index.html
@@ -38,7 +38,8 @@
 </div>
 
 </body>
-  <script src="AppEmit_0.1_min.js"></script>
+  <script type="text/javascript" src="AppEmit_0.1_min.js"></script>
+ 
 <script>
  
 	var init_App=function(){   
@@ -54,7 +55,8 @@
 	
 	   	   startAppEmit(ReqPar);
 	   }
-	   
-	   
+ 
+ 
+
 </script>
 </html>
