--- a/AppEmit/demo/htmlDemo/AppEmbed.html
+++ b/AppEmit/demo/htmlDemo/AppEmbed.html
@@ -28,7 +28,7 @@
 	   <div style="font-size:10px">1. webtype:   {"emit":"open","Obj":"flash","AppType":1,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp14/yzg/20140328/bombit7/zx_game7.htm","pos":1}</div>
 	<div style="font-size:10px">2. web swf file:  {"emit":"open","Obj":"flash","AppType":2,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp18/liuxy/20160130/17801/game.swf","pos":1,"par0":{"autoPlay":true,"loop":true,"quality":"high","wmode":"Transparent"}}</div>
     <div style="font-size:10px">3. web vedio file:  {"emit":"open","Obj":"flash","AppType":3,"src":"https://media.html5media.info/video.mp4","pos":1,"par0":{"autoPlay":1,"loop":1}}</div>
-	    <div style="font-size:10px">close flash:  {"emit":"close","Obj":"flash"} </div>      
+	    <div style="font-size:10px">close flash:  {"emit":"close","Obj":"flash"}           &nbsp;  &nbsp; &nbsp;      or   &nbsp;   &nbsp; {"emit":"closeAll","Obj":"flash"}</div>      
 
 		   </div>
              <div style="margin-top:10px;text-align:center">
@@ -38,7 +38,7 @@
 </div>
 
 </body>
-  <script src="AppEmit_0.1_min.js"></script>
+  <script type="text/javascript" src="AppEmit_0.1_min.js"></script>
 <script>
  
 	var init_App=function(){   
