--- a/AppEmit/demo/htmlDemo/AppEmbed.html
+++ b/AppEmit/demo/htmlDemo/AppEmbed.html
@@ -18,8 +18,8 @@
 
 
 <div class="container">
-<input type="text" class="form-control" size="80" style="margin-bottom:3px;" id="input_url" value="ws://localhost:80/appemit?cid=10000-0&flag=1" />
-     <button type="button" id="btn_Flash" onclick="init_App() " >websocket</button> &nbsp;  &nbsp; &nbsp;<a href="index.html" target="_blank">hardware  index Demo</a>
+<input type="text" class="form-control" size="50" style="margin-bottom:3px;" id="input_url" value="ws://localhost:80/appemit?cid=10000-0&flag=1" />
+     <button type="button" id="btn_Flash" onclick="init_App() " >websocket</button> &nbsp;  &nbsp; &nbsp;<a href="index.html" target="_blank">hardware  index Demo</a>&nbsp;  &nbsp; &nbsp; &nbsp;<a href="http://www.appemit.com" target="_blank">Homepage: appemit.com</a> 
       <div >  
 		<div style="font-size:10px">0.support localfile: d:/.../test1.swf or demo/htmlDemo/test1.swf , need install flash ActiveX:
 				<input type="text" class="form-control" size="90" style="margin-bottom:3px;" id="input_par" value='{"emit":"open","Obj":"flash","AppType":0,"src":"http://img1.yo4399.com/swf/00/0ff035e0e96584c07df65ab3636f72.swf","pos":1,"par0":{"autoPlay":1,"toolbar":0,"rightMenu":0,"hitCaption":0,"hideStop":0,"loop":1,"volumeMute":0,"flashVars":"a=0&b=0&c=SetInSrc"}}' />
