--- a/AppEmit/demo/htmlDemo/index.html
+++ b/AppEmit/demo/htmlDemo/index.html
@@ -19,7 +19,9 @@
 
 
 <div class="container">
-             <div style="font-size:10px">0. install/open Appemit.exe (F12 see console info)   &nbsp; &nbsp; &nbsp; &nbsp;<a href="AppEmbed.html" target="_blank">AppEmbed Demo</a> </div>
+    
+
+             <div style="font-size:10px">0. install/open Appemit.exe (F12 see console info)   &nbsp; &nbsp; &nbsp;&nbsp;<a href="AppEmbed.html" target="_blank">AppEmbed Demo</a> &nbsp;  &nbsp; &nbsp; &nbsp;<a href="http://www.appemit.com" target="_blank">Homepage: appemit.com</a> </div>
 			<div style="font-size:10px"> 1. connet websocket,support wss
 			<input type="text" class="form-control" size="80" style="margin-bottom:3px;" id="input_url" value="ws://localhost:80/appemit?cid=10000-0&sid=1&flag=1" />
 			 <button type="button" id="btn_Flash" onclick="init_App() " >websocket</button>
